# DesignPatterns

./: CMakeLists.txt  README.md
chapter01/: aggregate.h  book.cpp  book.h  book_shelf.cpp  book_shelf.h  book_shelf_iterator.cpp  book_shelf_iterator.h  iterator.h  main.cpp
chapter02/delegation/: banner.h  main.cpp  print.h  print_banner.cpp  print_banner.h
chapter02/inherit/: banner.cpp  banner.h  main.cpp  print.h  print_banner.cpp  print_banner.h
chapter03/: abstract_display.h  char_display.cpp  char_display.h  main.cpp  string_display.cpp  string_display.h
chapter04/: factory.h  id_card.cpp  id_card.h  id_card_factory.cpp  id_card_factory.h  main.cpp  product.h
chapter05/: main.cpp  singleton.h
chapter06/: main.cpp  manager.cpp  manager.h  message_box.cpp  message_box.h  product.h  underline_pen.cpp  underline_pen.h
chapter07/: builder.h  director.cpp  director.h  html_builder.cpp  html_builder.h  main.cpp  text_builder.cpp  text_builder.h
chapter08/: factory.h  item.h  link.h  list_factory.h  list_link.h  list_page.h  list_tray.h  main.cpp  page.h  table_factory.h  table_link.h  table_page.h  table_tray.h  tray.h
chapter09/: count_display.h  display.h  display_impl.h  main.cpp  string_display_impl.h
chapter10/: hand.h  main.cpp  player.h  prob_strategy.h  strategy.h  winning_strategy.h
chapter11/: directory.h  entry.h  file.h  main.cpp
chapter12/: border.h  display.h  full_border.h  main.cpp  side_border.h  string_display.h
chapter13/: directory.h  element.h  entry.h  file.h  list_visitor.h  main.cpp  visitor.h
chapter14/: limit_support.h  main.cpp  no_support.h  odd_support.h  special_support.h  support.h  trouble.h
chapter15/: database.h  html_writer.h  main.cpp  page_maker.h  util.h
chapter16/: colleague.h  colleague_button.h  colleague_text_field.h  mediator.h
chapter17/: digit_observer.h  graph_observer.h  main.cpp  number_generator.h  observer.h  random_number_generator.h
chapter18/: gamer.h  main.cpp  memento.h
chapter19/: context.h  day_state.h  night_state.h  state.h
chapter20/: big0.txt  big_char.h  big_char_factory.h  big_string.h  main.cpp
chapter21/: main.cpp  printable.h  printer.h  printer_proxy.h
chapter22/: canvas.h  color.h  command.h  draw_canvas.h  draw_command.h  drawable.h  graphics.h  macro_command.h  main.cpp  main.h
chapter23/: command_list_node.cpp  command_list_node.h  command_node.cpp  command_node.h  context.h  main.cpp  node.h  primitive_command_node.cpp  primitive_command_node.h  program_node.h  repeat_command_node.cpp  repeat_command_node.h  string_tokenizer.h
test/: size_char_array.cpp  string_array_size.cpp  string_char.cpp
